Just fixedd some layout issues

--- a/project/static/home.css
+++ b/project/static/home.css
@@ -10,6 +10,7 @@ a {
 }
 
 .row {
+    background-color: black;
     display: flex;
     flex-direction: row;
     /* justify-content: space-between; */
@@ -20,31 +21,37 @@ a {
 .column {
     display: flex;
     flex-direction: column;
+    flex-grow: 1;
     border: none;
-    /* overflow: hidden; */
     position: relative;
 }
 
+.clm-center {
+    align-items: center;
+}
 
 .column img {
     width: 100%;
     height: 100%;
-    opacity: 1;
+    opacity: 0.1;
 }
+
 .column h1 {
     font-size: 4em;
 }
- .column .left-bottom {
+
+.column .left-bottom {
     padding: 20px;
     color: white;
     position: absolute;
     bottom: 10px;
- }
+}
 
 .btn {
     border: none;
     margin: 0;
     padding: 15px;
+    width: fit-content;
     text-transform: capitalize;
     transition-duration: 300ms;
 }
